config-root/namespaces/jx-staging/node-test/node-test-node-test-deploy.yaml
# Source: node-test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-test-node-test
  labels:
    draft: draft-app
    chart: "node-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-test'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: node-test-node-test
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-test-node-test
    spec:
      serviceAccountName: node-test-node-test
      containers:
        - name: node-test
          image: "967882944490.dkr.ecr.ap-south-1.amazonaws.com/tyagi0502/node-test:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
