config-root/namespaces/jx-staging/node-test/node-test-svc.yaml
# Source: node-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-test
  labels:
    chart: "node-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-test'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: node-test-node-test
